--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Maze game</title>
-  <script src="js/app.js"></script>
+  <script src="js/maze.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,15 +12,15 @@
   <header>
     <h1>Maze game</h1>
     <form id="formGrid" onsubmit="return init(this)">
-      <label for="rows">Hauteur <br></label>
-      <input name="rows" id="rows" type="number" value="30" min="1" max="100">
+      <label for="rows">height <br></label>
+      <input name="rows" id="rows" type="number" value="30" min="2" max="100">
       <br>
 
-      <label for="cols">Largeur <br></label>
-      <input name="cols" id="cols" type="number" value="30" min="1" max="100">
+      <label for="cols">Width <br></label>
+      <input name="cols" id="cols" type="number" value="30" min="2" max="100">
       <br>
 
-      <button type="submit">Générer</button>
+      <button type="submit">generate</button>
     </form>
   </header>
 
