--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Maze game</title>
   <script src="js/maze.js"></script>
-  <!-- <script src="js/game.js"></script> -->
+  <script src="js/game.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
